--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>Home page for my github account: <a href="https://github.com/spacem">https://github.com/spacem</a>
-I am relearning web development with a new technology stack.</p>
+        <p>Home page for my github account: <a href="https://github.com/spacem">https://github.com/spacem</a></p>
 
-<p>To do this I have started development of a simulator for one of my favourite online games Dragon Next.</p>
+<p>I am relearning web development with a new technology stack. To do this I have started development of a simulator for one of my favourite online games Dragon Next.</p>
 
 <h2>
 <a id="dngearsim" class="anchor" href="#dngearsim" aria-hidden="true"><span class="octicon octicon-link"></span></a>dngearsim</h2>
