--- a/index.html
+++ b/index.html
@@ -53,6 +53,17 @@ Check out the simulator here:
 </blockquote>
 
 <p>I do not host any files from the game on github. I do however provide links to hosted files that can be used by the simulator. Nexon have expressed support for other simulators. I am happy to remove all links to hosted files if this is deemed inappropriate.</p>
+
+<h2>
+<a id="shoutouts" class="anchor" href="#shoutouts" aria-hidden="true"><span class="octicon octicon-link"></span></a>shoutouts</h2>
+<blockquote>
+<p>
+  Some of the tools I have found to be great.
+  <li>Github of course - for hosting and git hosting</li>
+  <li>Cloud9 - great browser based development enviroment</li>
+  <li>ungit - web frontend for git</li>
+  <li>Firebase - static file hosting</li>
+</p>
       </section>
     </div>
 
