--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
+  <head><meta name="google-site-verification" content="lbfO-zd9e-RLxsrrcxh2trWZr2RQHOxiDSGnIUQPjdY" />
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="spacem.GitHub.io : ">
