--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
       <section id="main_content" class="inner">
         <p>Home page for my github account: <a href="https://github.com/spacem">https://github.com/spacem</a></p>
 
-<p>I am relearning web development with a new technology stack. To do this I have started development of a simulator for one of my favourite online games Dragon Next.</p>
+<p>
+  I am relearning web development with a new technology stack.
+  To do this I have started development of a simulator for one of my favourite online games Dragon Next.
+</p>
 
 <h2>
 <a id="dngearsim" class="anchor" href="#dngearsim" aria-hidden="true"><span class="octicon octicon-link"></span></a>dngearsim</h2>
@@ -39,31 +42,30 @@
 Check out the simulator here:
 <a href="http://spacem.github.io/dngearsim">http://spacem.github.io/dngearsim</a></p>
 
-<p>This is my first angular app and still needs a lot of work.</p>
+<p>This is my first angular app - it works but it needs more work.
+</p>
 </blockquote>
 
 <h2>
 <a id="dntviewer" class="anchor" href="#dntviewer" aria-hidden="true"><span class="octicon octicon-link"></span></a>dntviewer</h2>
 
 <blockquote>
-<p>I started down this path by developing a viewer for the games dnt files which is here:
+<p>I started down this path by developing a viewer for Dragon Nest dnt files which is here:
 <a href="http://spacem.github.io/dntviewer">http://spacem.github.io/dntviewer</a></p>
 
-<p>For the viewer I developed a library dntreader.js that loads dnt files and I reuse in this simulator. dntviewer is written using &gt;bootstrap with some jquery and a few third party libraries for the grid and zip file support.</p>
+<p>For the viewer I developed a library dntreader.js that loads dnt files and I reuse in this simulator.
+dntviewer is written using bootstrap with some jquery and a few third party libraries thrown in for grid and zip file support.
+</p>
 </blockquote>
 
-<p>I do not host any files from the game on github. I do however provide links to hosted files that can be used by the simulator. Nexon have expressed support for other simulators. I am happy to remove all links to hosted files if this is deemed inappropriate.</p>
-
-<h2>
-<a id="shoutouts" class="anchor" href="#shoutouts" aria-hidden="true"><span class="octicon octicon-link"></span></a>shoutouts</h2>
-<blockquote>
+<p>Both of these application are GPL licensed so feel free to download, modify or extend.</p>
 <p>
-  Some of the tools I have found to be great.
-  <li>Github of course - for hosting and git hosting</li>
-  <li>Cloud9 - great browser based development enviroment</li>
-  <li>ungit - web frontend for git</li>
-  <li>Firebase - static file hosting</li>
+  I provide links to hosted files that were extracted from the game that are used by the simulator.
+  Nexon have expressed support for other simulators however I am happy to remove all links to hosted files if this is deemed inappropriate.
+  Artwork and details of in-game items are the property of Nexon/Eyedentity.
 </p>
+
+
       </section>
     </div>
 
