--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <p>
   I am relearning web development with a new technology stack.
-  To do this I have started development of a simulator for one of my favourite online games Dragon Next.
+  To do this I started development of a simulator for one of my favourite online games Dragon Next.
 </p>
 
 <h2>
@@ -44,6 +44,7 @@ Check out the simulator here:
 
 <p>This is my first angular app - it works but it needs more work.
 </p>
+
 </blockquote>
 
 <h2>
