--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <p>
   I am relearning web development with a new technology stack.
-  To do this I started development of a simulator for one of my favourite online games Dragon Next.
+  To do this I started development of a simulator for one of my favourite online games Dragon Nest.
 </p>
 
 <h2>
