--- a/index.html
+++ b/index.html
@@ -38,15 +38,31 @@
 <a id="dngearsim" class="anchor" href="#dngearsim" aria-hidden="true"><span class="octicon octicon-link"></span></a>dngearsim</h2>
 
 <blockquote>
-<p>The simulator essentially lets you view details of equipment from the game.
+<p>View details of equipment from the game Dragon Nest.
 Check out the simulator here:
-<a href="http://spacem.github.io/dngearsim">http://spacem.github.io/dngearsim</a></p>
+<a href="https://spacem.github.io/dngearsim">http://spacem.github.io/dngearsim</a></p>
 
-<p>This is my first angular app - it works but it needs more work.
+<p>
+  This is my first angular app.
+  I wrote this from scratch over many months. My goal has been for it to be multi-region, single page and mobile friendly.
 </p>
 
 </blockquote>
 
+<h2>
+<a id="dnskillsim" class="anchor" href="#dnskillsim" aria-hidden="true"><span class="octicon octicon-link"></span></a>dnskillsim</h2>
+
+<blockquote>
+<p>View and create skill builds from the game Dragon Nest.
+Check out the simulator here:
+<a href="https://dnskillsim.herokuapp.com">https://dnskillsim.herokuapp.com</a></p>
+
+<p>
+  This is a fork of another simulator that I have quickly hacked to get working with the latest game data.
+  I plan to enhance parts of this application to align with my goals from dngearsim. ie. multi-region, single page, and mobile friendly.
+</p>
+
+</blockquote>
 <h2>
 <a id="dntviewer" class="anchor" href="#dntviewer" aria-hidden="true"><span class="octicon octicon-link"></span></a>dntviewer</h2>
 
@@ -59,7 +75,7 @@ dntviewer is written using bootstrap with some jquery and a few third party libr
 </p>
 </blockquote>
 
-<p>Both of these application are GPL licensed so feel free to download, modify or extend.</p>
+<p>All of these application are GPL licensed so feel free to download, modify or extend.</p>
 <p>
   I provide links to hosted files that were extracted from the game that are used by the simulator.
   Nexon have expressed support for other simulators however I am happy to remove all links to hosted files if this is deemed inappropriate.
