--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="spacem.GitHub.io : ">
+    <meta name="yandex-verification" content="2f693e3256c65aea" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
