--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 <p>
   I have split the application into three parts and I deploy now in three places.
   As per the gear sim all game data is now deployed to firebase separating updates of content to the app.
-  The part of the sim where you make your build is mostly original code and runs on/from heroku.
-  For the other part of the sim runs on github pages for example selecting character, choosing region and publishing builds.
-  This new functionality is mostly copied code from dngearsim.
+  The part of the sim where you make your build is mostly someone elses code and runs on/from heroku.
+  The other parts of the sim just sit on github pages for example selecting character, choosing region and publishing builds.
+  This new functionality is mostly copied code from dngearsim which also supports these features.
 </p>
 
 </blockquote>
