--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 <blockquote>
 <p>I created this separate repository for maintaining scripts used to extract and optimise game data.
-<a href="https://github.com/spacem/dntpreprocess">http://spacem.github.io/dntpreprocess</a></p>
+<a href="https://github.com/spacem/dntpreprocess">https://github.com/spacem/dntpreprocess</a></p>
 
 <p>From the start I wanted the deployment to be a simple process.
 I found it nessessary to optimise the data file formats.
