add gearsim recovery

--- a/dngearsim-recover/index.html
+++ b/dngearsim-recover/index.html
@@ -85,8 +85,8 @@
   </div>
 </footer>
 
-<script src="/dngearsimmin/libs.min.js"></script>
-<script src="/dngearsimmin/dntviewer.min.js"></script>
+<script src="/dngearsim/min/libs.min.js"></script>
+<script src="/dngearsim/min/dntviewer.min.js"></script>
 
 <script src="/dngearsim/app.js"></script>
 <script src="/dngearsim/min/templates.min.js"></script>
