show region selection

--- a/dngearsim-recover/index.html
+++ b/dngearsim-recover/index.html
@@ -48,6 +48,7 @@
 <p>javascript is required</p>
 <br /><br />
 </noscript>
+<dngearsim-header></dngearsim-header>
 <div id="nav" class="container">
   <div class="row" dngearsim-nav ng-controller="NavCtrl">
   </div>
