--- a/dngearsim-recover/index.html
+++ b/dngearsim-recover/index.html
@@ -1,23 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
-<base href="/dngearsim-recover/">
+<base href="/dngearsim-recovery/">
 <meta charset="utf-8">
 <meta name="description" content="dngearsim: dragon nest gear simulator">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-<link rel="icon" type="image/png" href="images/dngearsim_icon.png">
 
-<title>DN Gear Sim Recovery</title>
+<title>DN Gear Sim http Build Recovery</title>
 
-<script type="application/ld+json">
-{
-  "@context": "http://schema.org",
-  "@type": "Organization",
-  "url": "//spacem.github.io/dngearsim/",
-  "logo": "//spacem.github.io/dngearsim/images/dngearsim_icon.png"
-}
-</script>
 
 <script>
   'use strict';
@@ -48,12 +39,9 @@
 <p>javascript is required</p>
 <br /><br />
 </noscript>
-<dngearsim-header></dngearsim-header>
 <div id="nav" class="container">
-  <div class="row" dngearsim-nav ng-controller="NavCtrl">
-  </div>
   <div class="row">
-    <div class="col-xs-12" id="app" ng-view>
+    <div class="col-xs-12" id="app" dngearsim-recovery>
       <br />
       <div class="row">
         <div class="col-xs-12 loading"></div>
@@ -93,14 +81,8 @@
 <script src="/dngearsim/app.js"></script>
 <script src="/dngearsim/min/templates.min.js"></script>
 <script src="/dngearsim/min/app.min.js"></script>
+<script src="/dngearsim-recovery/recovery.js"></script>
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-//  ga('create', 'UA-72901872-1', 'auto');
-</script>
 </body>
 </html>
