--- a/dngearsim-recover/index.html
+++ b/dngearsim-recover/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-<base href="/dngearsim-recovery/">
+<base href="/dngearsim-recover/">
 <meta charset="utf-8">
 <meta name="description" content="dngearsim: dragon nest gear simulator">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -81,7 +81,7 @@
 <script src="/dngearsim/app.js"></script>
 <script src="/dngearsim/min/templates.min.js"></script>
 <script src="/dngearsim/min/app.min.js"></script>
-<script src="/dngearsim-recovery/recovery.js"></script>
+<script src="/dngearsim-recover/recovery.js"></script>
 
 
 </body>
