--- a/dngearsim-recover/recovery.html
+++ b/dngearsim-recover/recovery.html
@@ -2,11 +2,11 @@
   <div class="col-xs-12 col-sm-8 col-lg-9">
   <div class="row">
     <div class="col-xs-12">
-      <a ng-href="publish" class="btn btn-link btn-block group-header-btn">
-        <h3 class="text-left"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span> publish<br />
-        <small>log in and publish your builds online</small>
+      <span>
+        <h3 class="text-left"> recover<br />
+        <small>sorry but I had to change the site to https so you may need to reimport these builds</small>
         </h3>
-      </a>
+      </span>
     </div>
   </div>
   <div id="saved-group" class="row" ng-if="::ctrl.builds" ng-repeat="b in ::ctrl.builds track by $index">
