--- a/dngearsim-recover/recovery.html
+++ b/dngearsim-recover/recovery.html
@@ -3,8 +3,8 @@
   <div class="row">
     <div class="col-xs-12">
       <span>
-        <h3 class="text-left"> recover<br />
-        <small>sorry but I had to change the site to https so you may need to reimport these builds</small>
+        <h3 class="text-left"> dngearsim build recovery<br />
+        <small>sorry but I had to change the site to https so you may need to reimport these builds - just click them</small>
         </h3>
       </span>
     </div>
