use import on recovery page

--- a/dngearsim-recover/recovery.html
+++ b/dngearsim-recover/recovery.html
@@ -2,20 +2,22 @@
   <div class="col-xs-12 col-sm-8 col-lg-9">
   <div class="row">
     <div class="col-xs-12">
-      <span>
-        <h3 class="text-left"> dngearsim build recovery<br />
-        <small>sorry but I had to change the site to https so you may need to reimport these builds - just click them</small>
-        </h3>
-      </span>
+      <h3 class="text-left"> dngearsim build recovery<br />
+      <small>sorry but I had to change the site to https so you may need to reimport these builds</small>
+      </h3>
+      <p>
+         Click the builds you want to keep to export them to files.
+         Then use <a href="https://spacem.github.io/dngearsim/import">the new import screen</a> to bring them in to the https version of the site.
+      </p>
     </div>
   </div>
   <div id="saved-group" class="row" ng-if="::ctrl.builds" ng-repeat="b in ::ctrl.builds track by $index">
     
     <div class="col-xs-12 group-header">
-    <a class="btn btn-link btn-block group-header-btn" ng-href="https://spacem.github.io/dngearsim/{{ctrl.getBuildLink(b)}}">
+    <button class="btn btn-link btn-block group-header-btn" dngearsim-export-action build-name="b.name" build="b.build">
       <dngearsim-build-summary build-name="::b.name" build="::b.build">
       </dngearsim-build-summary>
-    </a>
+    </button>
     </div>
     
   </div>
