fix up export buttons

--- a/dngearsim-recover/recovery.html
+++ b/dngearsim-recover/recovery.html
@@ -12,15 +12,16 @@
     </div>
   </div>
   <div id="saved-group" class="row" ng-if="::ctrl.builds" ng-repeat="b in ::ctrl.builds track by $index">
-    
-    <div class="col-xs-12 group-header">
-    <span class="btn btn-link btn-block group-header-btn" dngearsim-export-action build-name="b.name" build="b.build">
-      <dngearsim-build-summary build-name="::b.name" build="::b.build">
-      </dngearsim-build-summary>
-    </span>
-    <button dngearsim-build-export-action class="btn btn-default" build="b.build" build-name="b.name">
-    </button>
-    
+    <div class="col-xs-11 group-header">
+      <button dngearsim-build-export-action class="btn btn-default" build="b.build" build-name="b.name">
+      </button>
+    </div>
+    <div class="col-xs-11 group-header">
+      <span class="btn btn-link btn-block group-header-btn" dngearsim-export-action build-name="b.name" build="b.build">
+        <dngearsim-build-summary build-name="::b.name" build="::b.build">
+        </dngearsim-build-summary>
+      </span>
+    </div>
   </div>
   </div>
 </div>
