add midi peak vis

--- a/index.html
+++ b/index.html
@@ -35,6 +35,23 @@
 </p>
 
 <h2>
+<a id="midi-peak-vis" class="anchor" href="#midi-peak-vis" aria-hidden="true"><span class="octicon octicon-link"></span></a>Midi Peak Vis</h2>
+
+<blockquote>
+<p>A tiny windows peak visulsation that displays using midi keyboard lights.
+<br>
+<a href="https://spacem.github.io/midi-peak-vis">https://spacem.github.io/midi-peak-vis</a></p>
+
+<p>
+  This tiny (16KB) app hooks into the windows mixer and lights up the keyboard in time with any sounds being played.
+  It was fun to take control of the lights on my Novation Launchkey keyboard.
+  I have not written any c++ for a long time but it seemed the best choice.
+  I couldn't find anything similiar out there. Might extend it to support other devices if there is any interest.
+</p>
+
+</blockquote>
+
+<h2>
 <a id="dngearsim" class="anchor" href="#dngearsim" aria-hidden="true"><span class="octicon octicon-link"></span></a>dngearsim</h2>
 
 <blockquote>
@@ -45,7 +62,7 @@
 <p>
   This is my first angular app. I wrote this from scratch and learnt a lot along the way.
   My goal has been for it to be multi-region, single page, mobile friendly and easy to update.
-  I store user builds and deploy latest game data to a firebase back end.
+  I store user builds and deploy latest game data to a simple file store based back end.
 </p>
 
 </blockquote>
