fix midipeakvis url

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <blockquote>
 <p>A tiny windows peak visulsation that displays using midi keyboard lights.
 <br>
-<a href="https://spacem.github.io/midi-peak-vis">https://spacem.github.io/midi-peak-vis</a></p>
+<a href="https://github.com/spacem/midi-peak-vis">https://github.com/spacem/midi-peak-vis</a></p>
 
 <p>
   This tiny (16KB) app hooks into the windows mixer and lights up the keyboard in time with any sounds being played.
