--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>Home page for my github account: <a href="https://github.com/spacem">https://github.com/spacem</a></p>
+        <p>Home page for my github account: <a href="https://dngearsim.netlify.com">https://dngearsim.netlify.com</a></p>
 
 <p>
   Here are some of the projects I work on in my spare time.
