--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>Home page for my github account: <a href="https://dngearsim.netlify.com">https://dngearsim.netlify.com</a></p>
+        <p>Home page for my github account: <a href="https://github.com/spacem">https://github.com/spacem</a></p>
 
 <p>
   Here are some of the projects I work on in my spare time.
@@ -57,7 +57,7 @@
 <blockquote>
 <p>An equipment simulator for the game Dragon Nest.
 <br>
-<a href="https://spacem.github.io/dngearsim">https://spacem.github.io/dngearsim</a></p>
+<a href="https://dngearsim.netlify.com">https://dngearsim.netlify.com</a></p>
 
 <p>
   This is my first angular app. I wrote this from scratch and learnt a lot along the way.
