--- a/index.html
+++ b/index.html
@@ -108,6 +108,20 @@
 </p>
 
 </blockquote>
+
+<h2>
+<a id="dntviewer2" class="anchor" href="#dntviewer2" aria-hidden="true"><span class="octicon octicon-link"></span></a>dntviewer2</h2>
+
+<blockquote>
+<p>
+  A rewrite of dntviewer with a slightly slicker UI. My first time trying angular2.
+  <a href="https://dntviewer.netlify.com">https://dntviewer.netlify.com</a>
+</p>
+
+<p>For the viewer I developed a library dntreader.js that loads dnt files and I reuse in this simulator.
+</p>
+</blockquote>
+        
 <h2>
 <a id="dntviewer" class="anchor" href="#dntviewer" aria-hidden="true"><span class="octicon octicon-link"></span></a>dntviewer</h2>
 
@@ -118,6 +132,7 @@
 <p>For the viewer I developed a library dntreader.js that loads dnt files and I reuse in this simulator.
 </p>
 </blockquote>
+        
 <h2>
 <a id="dntpreprocess" class="anchor" href="#dntpreprocess" aria-hidden="true"><span class="octicon octicon-link"></span></a>dntpreprocess</h2>
 
