--- a/index.html
+++ b/index.html
@@ -31,26 +31,9 @@
         <p>Home page for my github account: <a href="https://github.com/spacem">https://github.com/spacem</a></p>
 
 <p>
-  Here are some of the projects I work on in my spare time.
+  Here are some of the projects I have worked on in my spare time.
 </p>
-
-<h2>
-<a id="midi-peak-vis" class="anchor" href="#midi-peak-vis" aria-hidden="true"><span class="octicon octicon-link"></span></a>Midi Peak Vis</h2>
-
-<blockquote>
-<p>A tiny windows peak visulsation that displays using midi keyboard lights.
-<br>
-<a href="https://github.com/spacem/midi-peak-vis">https://github.com/spacem/midi-peak-vis</a></p>
-
-<p>
-  This tiny (16KB) app hooks into the windows mixer and lights up the keyboard in time with any sounds being played.
-  It was fun to take control of the lights on my Novation Launchkey keyboard.
-  I have not written any c++ for a long time but it seemed the best choice.
-  I couldn't find anything similiar out there. Might extend it to support other devices if there is any interest.
-</p>
-
-</blockquote>
-
+        
 <h2>
 <a id="apple-nest" class="anchor" href="#apple-nest" aria-hidden="true"><span class="octicon octicon-link"></span></a>Apple Nest</h2>
 
@@ -65,6 +48,22 @@
   In the game you can plant seeds, harvest apples and and sell the apples for in-game money.
   Use in-game money to upgrade your weapon and armour which will help to fight the battle.
   Like another similiar game the secret to victory is to create many characters and transfer the money to a main character via the storage npc.
+</p>
+
+</blockquote>
+
+<h2>
+<a id="midi-peak-vis" class="anchor" href="#midi-peak-vis" aria-hidden="true"><span class="octicon octicon-link"></span></a>Midi Peak Vis</h2>
+
+<blockquote>
+<p>A tiny windows peak visulsation that displays using midi keyboard lights.
+<br>
+<a href="https://github.com/spacem/midi-peak-vis">https://github.com/spacem/midi-peak-vis</a></p>
+
+<p>
+  This tiny (16KB) app hooks into the windows mixer and lights up the keyboard in time with any sounds being played.
+  It was fun to take control of the lights on my Novation Launchkey keyboard.
+  I have not written any c++ for a long time but it seemed the best choice.
 </p>
 
 </blockquote>
