change license text

--- a/index.html
+++ b/index.html
@@ -142,14 +142,12 @@ Also I created some extra index files that are useful for datamining.
 The scripts have grown a lot but deployment of updates remains a single step process.
 </p>
 </blockquote>
-        
-<p>All of these application are GPL licensed so feel free to download, modify or extend.</p>
-<p>
-  I provide links to hosted files that were extracted from the game that are used by the simulator.
-  Nexon have expressed support for other simulators however I am happy to remove all links to hosted files if this is deemed inappropriate.
-  Artwork and details of in-game items are the property of Nexon/Eyedentity.
-</p>
 
+<p>
+  For dngearsim, dnskill sim and dntviewer I provide links to hosted files that were extracted from the game.
+  Nexon have expressed support for other simulators however I am happy to remove all links to hosted files if this is deemed inappropriate.
+  Artwork and details of in-game items used in these projects are the property of Nexon/Eyedentity.
+</p>
 
       </section>
     </div>
