Change to netlify.app

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <blockquote>
 <p>A little game where you can grow apples and battle monsters.
 <br>
-<a href="https://apple-nest.netlify.com">https://apple-nest.netlify.com</a></p>
+<a href="https://apple-nest.netlify.app">https://apple-nest.netlify.app</a></p>
 
 <p>
   My first vue.js app.
@@ -74,7 +74,7 @@
 <blockquote>
 <p>An equipment simulator for the game Dragon Nest.
 <br>
-<a href="https://dngearsim.netlify.com">https://dngearsim.netlify.com</a></p>
+<a href="https://dngearsim.netlify.app">https://dngearsim.netlify.app</a></p>
 
 <p>
   This is my first angular app. I wrote this from scratch and learnt a lot along the way.
@@ -114,7 +114,7 @@
 <blockquote>
 <p>
   A rewrite of dntviewer with a slightly slicker UI. My first time trying angular2.
-  <a href="https://dntviewer.netlify.com">https://dntviewer.netlify.com</a>
+  <a href="https://dntviewer.netlify.app">https://dntviewer.netlify.app</a>
 </p>
 </blockquote>
         
